IDE-508: added GWT tests